--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SUPABASE_SERVICE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS
 
 # Server Configuration
 PORT=3000
-ENVIRONMENT=dev
+ENVIRONMENT=staging
 
 # Storage Configuration (for bundle files)
-STORAGE_BASE_URL=https://192.168.1.25:3000/
+STORAGE_BASE_URL=http://localhost:3000/
